[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Lore/Lore.gd" type="Script" id=2]
[ext_resource path="res://Menu/font.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = SubResource( 3 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "fadeout"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.129412, 0.643137, 0.462745, 1 )
border_width_left = 4
border_width_top = 20
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.137255, 0.501961, 0.431373, 1 )
expand_margin_top = 20.0

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[node name="LoreRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -758.0
margin_top = -96.0
margin_right = 742.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fadeout = SubResource( 2 )

[node name="PressSpace" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "Press Space or Enter to continue..."
align = 1

[node name="WindowDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -128.0
margin_right = 304.0
margin_bottom = 128.0
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_fonts/title_font = SubResource( 5 )
custom_styles/panel = SubResource( 6 )
window_title = "Instructions"

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 8.0
margin_right = 600.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 8 )
text = "Controls:
Left mouse click to dash in the mouse direction.
Right mouse click on a dark tile near you to plant seeds if you have them.
ESC to pause

Abilities:
Dash - Dash forward in the direction the mouse is pointing. While dashing you gain invincibility, and there is a small cooldown if you don't hit anything.
Collect -  Touch a seed, heart or wheat to collect it. You collect it so fast, the pc's slow frame rate doesn't catch your movement!"
autowrap = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="popup_hide" from="WindowDialog" to="." method="_on_WindowDialog_popup_hide"]
